--- a/index.html
+++ b/index.html
@@ -4,27 +4,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Darshan N G | SIPC Digital V-Card</title>
+    <title>Darshan N G | SIPC Pest Control Solutions</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
       body {
-        font-family: 'Inter', sans-serif;
-        background-color: #f8fafc;
+        font-family: 'Plus Jakarta Sans', sans-serif;
+        background-color: #f1f5f9;
+        color: #1e293b;
         -webkit-tap-highlight-color: transparent;
       }
-      .vcard-gradient {
-        background: linear-gradient(135deg, #1e3a8a 0%, #1e40af 100%);
+      .glass-card {
+        background: rgba(255, 255, 255, 0.95);
+        backdrop-filter: blur(10px);
+        border: 1px solid rgba(255, 255, 255, 0.2);
       }
-      @keyframes soft-pulse {
-        0% { box-shadow: 0 0 0 0 rgba(249, 115, 22, 0.4); }
-        70% { box-shadow: 0 0 0 10px rgba(249, 115, 22, 0); }
-        100% { box-shadow: 0 0 0 0 rgba(249, 115, 22, 0); }
+      .sipc-gradient {
+        background: linear-gradient(135deg, #0f172a 0%, #1e3a8a 100%);
       }
-      .animate-soft-pulse {
-        animation: soft-pulse 2s infinite;
+      .service-card:hover {
+        transform: translateY(-4px);
+        box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+      }
+      @keyframes pulse-ring {
+        0% { transform: scale(0.9); opacity: 0.7; }
+        50% { transform: scale(1); opacity: 0.3; }
+        100% { transform: scale(1.1); opacity: 0; }
+      }
+      .pulse-btn::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border-radius: inherit;
+        background: inherit;
+        z-index: -1;
+        animation: pulse-ring 2s cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite;
       }
     </style>
   <script type="importmap">
