--- a/index.html
+++ b/index.html
@@ -1,47 +1,40 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Darshan N G | SIPC Pest Control Solutions</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>Darshan N G | SIPC Pest Control</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
       body {
-        font-family: 'Plus Jakarta Sans', sans-serif;
-        background-color: #f1f5f9;
-        color: #1e293b;
-        -webkit-tap-highlight-color: transparent;
+        font-family: 'Inter', sans-serif;
+        background-color: #F8FAFC;
+        color: #0F172A;
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
       }
-      .glass-card {
-        background: rgba(255, 255, 255, 0.95);
-        backdrop-filter: blur(10px);
-        border: 1px solid rgba(255, 255, 255, 0.2);
+      .premium-shadow {
+        box-shadow: 0 4px 20px -2px rgba(0, 0, 0, 0.05);
       }
-      .sipc-gradient {
-        background: linear-gradient(135deg, #0f172a 0%, #1e3a8a 100%);
+      .service-grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 12px;
       }
-      .service-card:hover {
-        transform: translateY(-4px);
-        box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+      /* Custom scrollbar for subtle feel */
+      ::-webkit-scrollbar {
+        width: 4px;
       }
-      @keyframes pulse-ring {
-        0% { transform: scale(0.9); opacity: 0.7; }
-        50% { transform: scale(1); opacity: 0.3; }
-        100% { transform: scale(1.1); opacity: 0; }
+      ::-webkit-scrollbar-track {
+        background: transparent;
       }
-      .pulse-btn::before {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        border-radius: inherit;
-        background: inherit;
-        z-index: -1;
-        animation: pulse-ring 2s cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite;
+      ::-webkit-scrollbar-thumb {
+        background: #E2E8F0;
+        border-radius: 10px;
       }
     </style>
   <script type="importmap">
