--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Plus+Jakarta+Sans:wght@600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;600;700;800&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
       :root {
         --brand-deep: #0F172A;
@@ -16,33 +16,45 @@
       }
       body {
         font-family: 'Inter', sans-serif;
-        background-color: #F8FAFC;
+        background-color: #F1F5F9;
         margin: 0;
         padding: 0;
         -webkit-font-smoothing: antialiased;
-        display: flex;
-        justify-content: center;
+        overflow-x: hidden;
       }
       #root {
         width: 100%;
         max-width: 430px;
         min-height: 100vh;
+        margin: 0 auto;
         background: white;
-        box-shadow: 0 0 40px rgba(0,0,0,0.05);
-      }
-      .premium-gradient {
-        background: linear-gradient(135deg, #0F172A 0%, #1E293B 100%);
+        position: relative;
+        overflow: hidden;
       }
       .font-heading {
         font-family: 'Plus Jakarta Sans', sans-serif;
       }
-      .service-card {
-        transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+      @keyframes fadeInUp {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
       }
-      .service-card:active {
+      .animate-reveal {
+        animation: fadeInUp 0.6s cubic-bezier(0.22, 1, 0.36, 1) forwards;
+      }
+      .reveal-hidden {
+        opacity: 0;
+      }
+      /* Smooth transitions for interactions */
+      .tap-active:active {
         transform: scale(0.96);
       }
-      /* Hide scrollbar for mobile clean look */
+      /* Hide scrollbar */
       ::-webkit-scrollbar { display: none; }
     </style>
   <script type="importmap">
